# HalluciScope

./: .gitignore  README.md  pyproject.toml
backend/: config.py
backend/api/: app.py  schemas.py  startup.py
backend/api/routes/: analysis.py  feedback.py
backend/cli/: main.py
backend/core/: chunker.py  decomposer.py  document.py  ensemble.py  generator.py  pipeline.py
backend/core/verifiers/: base.py  consistency.py  nli.py  similarity.py
backend/db/: models.py  repository.py
backend/models/: loader.py
evaluation/: ablation.py  benchmarks.py  calibration.py
evaluation/datasets/: demo.jsonl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChunkViewer.tsx  ClaimCard.tsx  DocumentInput.tsx  ScoreGauge.tsx
frontend/src/pages/: AnalysisPage.tsx  DashboardPage.tsx
tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_config.py  test_consistency.py  test_db.py  test_decomposer.py  test_document.py  test_ensemble.py  test_generator.py  test_nli.py  test_pipeline.py  test_similarity.py
